[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://src/UI/Components/ConfirmationPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Elements/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menus/Characters/CharacterListing.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Menus/Characters/CharactersMenu.gd" type="Script" id=6]
[ext_resource path="res://src/UI/Menus/Characters/CharacterList.gd" type="Script" id=8]
[ext_resource path="res://src/World/ConnectedWorld.tscn" type="PackedScene" id=9]

[node name="CharactersMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -155.0
margin_right = 256.0
margin_bottom = 155.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
CharacterListing = ExtResource( 4 )
WorldScene = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 528.0
margin_bottom = 308.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 504.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 480.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_constants/separation = 20
script = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 480.0
margin_bottom = 170.0
alignment = 1

[node name="LoginButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 32.0
margin_right = 232.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
text = "Login"

[node name="CreateButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 248.0
margin_right = 448.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
text = "Create new"

[node name="ConfirmationPopup" parent="." instance=ExtResource( 2 )]
visible = false
text = "Delete this character?"
[connection signal="cancelled" from="ConfirmationPopup" to="." method="_on_ConfirmationPopup_cancelled"]
[connection signal="confirmed" from="ConfirmationPopup" to="." method="_on_ConfirmationPopup_confirmed"]
